--- a/projects/portal/src/app/home/home.component.html
+++ b/projects/portal/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<h1>Home</h1>
+<h4>Home</h4>
+<hr />
+<p>
+  This is <code>HomeComponent</code>, which is a local component in
+  <code>Portal</code> application.
+</p>
