--- a/projects/widgets/src/app/kpi/kpi.component.html
+++ b/projects/widgets/src/app/kpi/kpi.component.html
@@ -1,1 +1,9 @@
-<p>kpi works!</p>
+<div class="card">
+  <div class="card-body">
+    <div class="card-title">KPI</div>
+    <div class="card-text">
+      This is <code>Kpicomponent</code>, loaded from a remote module in
+      <code>Widgets</code> application.
+    </div>
+  </div>
+</div>
