--- a/projects/dashboard/src/app/dashboard/dashboard.component.scss
+++ b/projects/dashboard/src/app/dashboard/dashboard.component.scss
@@ -1,8 +1,12 @@
 .actions {
   display: flex;
   gap: 1rem;
+  margin-bottom: 1rem;
 }
 
-.widget {
-  border: 1px solid #d2d2d2;
+.widgets{
+  width: 100%;
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
 }
