--- a/projects/portal/src/app/app.component.html
+++ b/projects/portal/src/app/app.component.html
@@ -1,6 +1,20 @@
-<div class="nav">
-  <a routerLink="/home">Home</a>
-  <a routerLink="/dashboard">Dashboard</a>
+<nav
+  class="navbar navbar-expand bg-dark border-bottom border-body"
+  data-bs-theme="dark">
+  <div class="container">
+    <a class="navbar-brand" routerLink="/">Portal</a>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item" *ngFor="let navItem of navItems">
+        <a
+          class="nav-link"
+          [routerLink]="navItem.path"
+          routerLinkActive="active"
+          >{{ navItem.label }}</a
+        >
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class="container py-4">
+  <router-outlet></router-outlet>
 </div>
-
-<router-outlet></router-outlet>
